--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Welcome to Balance!</h1>
 
+<h4> We are under construction!.</h4>
+
 <p>Balance is a web application which helps you to have a control over your 
 incomes and outgoings. You can add a short description for each record, and
 you can know in what you are spending your money and how much you have left.</p>
