--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,9 +47,8 @@
 	  <%= link_to "Balance", root_path, class: 'brand' %>
           <div class="container nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li><%= link_to "Sign in", new_user_session_path %></li>
+              <li><%= link_to "Sign up", new_user_registration_path %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -64,7 +63,7 @@
         </div>
 
       <footer>
-        <p>&copy; Company 2012</p>
+        <!-- <p>&copy; Company 2012</p> -->
       </footer>
 
     </div> <!-- /container -->
