--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,12 @@
 	  <%= link_to "Balance", root_path, class: 'brand' %>
           <div class="container nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Sign in", new_user_session_path %></li>
-              <li><%= link_to "Sign up", new_user_registration_path %></li>
+	      <% if user_signed_in? %>
+	        <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+	      <% else %>
+                <li><%= link_to "Sign in", new_user_session_path %></li>
+                <li><%= link_to "Sign up", new_user_registration_path %></li>
+              <% end %>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
