--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,19 @@
     </div>
 
     <div class="container">
-        <div class="row">
+      <% if notice %>
+        <div class="alert alert-success">
+	  <button type="button" class="close" data-dismiss="alert">×</button>
+	  <%= notice %>
+	</div>
+      <% elsif alert %>
+        <div class="alert">
+	  <button type="button" class="close" data-dismiss="alert">×</button>
+	  <%= alert %>
+	</div>
+      <% end %>
+
+      <div class="row">
           <div class="span9">
              <%= yield %>
           </div>
