Added styles to edit information view.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,7 @@
           <div class="container nav-collapse">
             <ul class="nav">
 	      <% if user_signed_in? %>
+	        <li><%= link_to "Login as #{ current_user.email }", edit_user_registration_path %></li>
 	        <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
 	      <% else %>
                 <li><%= link_to "Sign in", new_user_session_path %></li>
