--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,25 +1,58 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.edit', :default => "Edit Your Account") %>
+  </h1>
+</div>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), 
+                       :html => { :method => :put, class: 'form-horizontal' }) do |f| %>
+  
+  <% if resource.errors.any? %>
+    <div class="alert alert-error">
+      <button type="button" class="close" data-dismiss="alert">×</button>
+      <%= devise_error_messages! %>
+    </div>
+  <% end %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <div class="control-group">
+    <%= f.label :email, class: 'control-label' %>
+    <div class="controls">
+      <%= f.email_field :email, class: 'email_field' %>
+    </div>
+  </div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
+  <div class="control-group">
+    <%= f.label :password, class: 'control-label' %>
+    <div class="controls">
+      <i>(leave blank if you don't want to change it)</i><br />
+      <%= f.password_field :password, :autocomplete => "off", class: 'password_field' %>
+    </div>
+  </div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div class="control-group">
+    <%= f.label :password_confirmation, class: 'control-label' %>
+    <div class="controls">
+      <%= f.password_field :password_confirmation, class: 'password_field' %>
+    </div>
+  </div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
+  <div class="control-group">
+    <%= f.label :current_password, class: 'control-label' %>
+    <div class="controls">
+      <i>(we need your current password to confirm your changes)</i><br />
+      <%= f.password_field :current_password, class: 'password_field' %>
+    </div>
+  </div>
 
-  <div><%= f.submit "Update" %></div>
+  <div class="form-actions">
+    <%= f.submit "Update", class: 'btn btn-primary' %>
+    <%= link_to "Cancel", root_path, class: 'btn' %>
+    <br />
+    <br />
+    <p>
+      Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), 
+		   :data => { :confirm => "Are you sure?" }, :method => :delete %>.
+    </p>
+  </div>
 <% end %>
 
-<h3>Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
-
-<%= link_to "Back", :back %>
