--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,16 +1,18 @@
-<%- model_class = User -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => t('helpers.titles.new', 
-                     :model => model_class.model_name.human,
-                     :default => "Sign Up") %>
+  <h1><%=t '.title', :default => t('helpers.titles.new', :default => "Sign Up") %>
   </h1>
 </div>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name),
              html: { class: 'form-horizontal' }) do |f| %>
 
-  <%= devise_error_messages! %>
-
+  <% if resource.errors.any? %>
+    <div class="alert alert-error">
+      <button type="button" class="close" data-dismiss="alert">×</button>
+      <%= devise_error_messages! %>
+    </div>
+  <% end %>
+  
   <div class="control-group">
     <%= f.label :email, class: 'control-label' %>
     <div class="controls">
