--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -3,8 +3,9 @@
   </h1>
 </div>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), 
-                       :html => { :method => :put, class: 'form-horizontal' }) do |f| %>
+<%= form_for(resource, :as => resource_name, 
+             :url => registration_path(resource_name), 
+             :html => { :method => :put, class: 'form-horizontal' }) do |f| %>
   
   <% if resource.errors.any? %>
     <div class="alert alert-error">
@@ -24,14 +25,16 @@
     <%= f.label :password, class: 'control-label' %>
     <div class="controls">
       <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password, :autocomplete => "off", class: 'password_field' %>
+      <%= f.password_field :password, :autocomplete => "off", 
+                            class: 'password_field edit_account_field' %>
     </div>
   </div>
 
   <div class="control-group">
     <%= f.label :password_confirmation, class: 'control-label' %>
     <div class="controls">
-      <%= f.password_field :password_confirmation, class: 'password_field' %>
+      <%= f.password_field :password_confirmation, 
+	  class: 'password_field edit_account_field' %>
     </div>
   </div>
 
