--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -20,6 +20,15 @@
     </div>
   </div>
 
+  <% if current_user && current_user.admin %>
+    <div class="control-group">
+      <%= f.label :admin, class: 'control-label' %>
+      <div class="controls">
+	<%= f.check_box :admin, class: 'checkbox_field' %>
+      </div>
+    </div>
+  <% end %>
+
   <div class="control-group">
     <%= f.label :password, class: 'control-label' %>
     <div class="controls">
