--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,45 +3,20 @@
   </h1>
 </div>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name),
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name),
              html: { class: 'form-horizontal' }) do |f| %>
 
   <% if resource.errors.any? %>
-    <div class="alert alert-error">
+    <div class="alert alert-error fade in">
       <button type="button" class="close" data-dismiss="alert">×</button>
       <%= devise_error_messages! %>
     </div>
   <% end %>
   
-  <div class="control-group">
-    <%= f.label :email, class: 'control-label' %>
-    <div class="controls">
-      <%= f.email_field :email, class: 'email_field' %>
-    </div>
-  </div>
-
-  <% if current_user && current_user.admin %>
-    <div class="control-group">
-      <%= f.label :admin, class: 'control-label' %>
-      <div class="controls">
-	<%= f.check_box :admin, class: 'checkbox_field' %>
-      </div>
-    </div>
-  <% end %>
-
-  <div class="control-group">
-    <%= f.label :password, class: 'control-label' %>
-    <div class="controls">
-      <%= f.password_field :password, class: 'password_field' %>
-    </div>
-  </div>
-
-  <div class="control-group">
-    <%= f.label :password_confirmation, class: 'control-label' %>
-    <div class="controls">
-      <%= f.password_field :password_confirmation, class: 'password_field' %>
-      </div>
-  </div>
+  <%= f.input :email %>
+  <%= f.input :admin %>
+  <%= f.input :password %>
+  <%= f.input :password_confirmation %>
 
   <div class="form-actions">
     <%= f.submit "Sign up", class: 'btn btn-primary' %><br /><br />
