Added animation to success and alert messages.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,12 +63,12 @@
 
     <div class="container">
       <% if notice %>
-        <div class="alert alert-success">
+        <div class="alert alert-success fade in">
 	  <button type="button" class="close" data-dismiss="alert">×</button>
 	  <%= notice %>
 	</div>
       <% elsif alert %>
-        <div class="alert">
+        <div class="alert fade in">
 	  <button type="button" class="close" data-dismiss="alert">×</button>
 	  <%= alert %>
 	</div>
