--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -1,4 +1,7 @@
 <%= simple_form_for @register, :html => { :class => 'form-horizontal' } do |f| %>
+  
+  <%= render partial: 'home/error_messages', locals: { model: @register } %>
+
   <%= f.input :date %>
   <%= f.input :description %>
   <%= f.input :amount %>
