--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -17,7 +17,7 @@
     <% @registers.each do |register| %>
       <tr>
 	<td><%= register.description %></td>
-        <td><%= register.amount %></td>
+        <td>$<%= register.amount %></td>
         <td><%= register.balance_type %></td>
         <td><%=l register.created_at %></td>
         <td>
@@ -33,6 +33,16 @@
         </td>
       </tr>
     <% end %>
+    <tr>
+      <td>
+	<strong>Total Incoming: </strong><span>$<%= current_user.total_incoming %></span>
+      </td>
+    </tr>
+    <tr>
+      <td>
+	<strong>Total Outgoing: </strong><span>$<%= current_user.total_outgoing %></span>
+      </td>
+    </tr>
   </tbody>
 </table>
 
