Added styles to totals.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -34,3 +34,11 @@ body {
 //
 // Example:
 // @linkColor: #ff0000;    
+
+span#total-incoming {
+    color: green;
+}
+
+span#total-outgoing {
+    color: red;
+}
