--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -4,7 +4,7 @@
 
   <%= f.input :date %>
   <%= f.input :description %>
-  <%= f.input :amount %>
+  <%= f.input :amount, label: "Amount ($)" %>
   <%= f.input :balance_type %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
