Added paid to views.

--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -12,6 +12,8 @@
   <dd><%= @register.amount %></dd>
   <dt><strong><%= model_class.human_attribute_name(:balance_type) %>:</strong></dt>
   <dd><%= @register.balance_type %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:paid) %>:</strong></dt>
+  <dd><%= @register.paid %></dd>
 </dl>
 
 <div class="form-actions">
