--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -6,6 +6,7 @@
   <%= f.input :description %>
   <%= f.input :amount, label: "Amount ($)" %>
   <%= f.input :balance_type %>
+  <%= f.input :paid %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
