--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -9,6 +9,7 @@
       <th><%= model_class.human_attribute_name(:description) %></th>
       <th><%= model_class.human_attribute_name(:amount) %></th>
       <th><%= model_class.human_attribute_name(:balance_type) %></th>
+      <th><%= model_class.human_attribute_name(:paid) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -19,6 +20,7 @@
 	<td><%= register.description %></td>
         <td>$ <%= register.amount %></td>
         <td><%= register.balance_type %></td>
+	<td><%= register.paid %></td>
         <td><%=l register.created_at %></td>
         <td>
 	  <%= link_to t('.show', :default => t("helpers.links.show")),
