--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -2,11 +2,12 @@
   
   <%= render partial: 'home/error_messages', locals: { model: @register } %>
 
-  <%= f.input :date %>
+  <%= f.input :date, discard_day: true %>
   <%= f.input :description %>
   <%= f.input :amount, label: "Amount ($)" %>
-  <%= f.input :balance_type %>
+  <%= f.input :balance_type, collection: Register::BALANCE_TYPE %>
   <%= f.input :paid %>
+
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
