--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -13,7 +13,7 @@
   <dt><strong><%= model_class.human_attribute_name(:balance_type) %>:</strong></dt>
   <dd><%= @register.balance_type %></dd>
   <dt><strong><%= model_class.human_attribute_name(:paid) %>:</strong></dt>
-  <dd><%= @register.paid %></dd>
+  <dd><%= show_paid_status(@register) %></dd>
 </dl>
 
 <div class="form-actions">
