--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -3,25 +3,38 @@
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
 
-<% @registers_years.each do |registers_year| %>
+<div class="tabbable">
 
-  <h2><%= registers_year %></h2>
-  
-  <% current_user.registers_months(registers_year).each do |registers_month| %>
+  <ul class="nav nav-tabs">
+    <% @registers_years.each do |register_year| %>
+      <li><a href="#<%= register_year %>" data-toggle="tab"><%= register_year %></a></li>
+    <% end %>
+  </ul>
 
-    <h2><%= registers_month[:name] %></h2>
+  <div class="tab-content">
 
-    <%= render partial: 'registers', locals: { 
-      model_class: model_class,
-      registers: current_user.registers_by_date(registers_year, registers_month[:id]),
-      registers_month: registers_month,
-      registers_year: registers_year
-      }
-    %>
-    
-  <% end %>
-  <hr />
-<% end %>
+    <% @registers_years.each do |register_year| %>
+
+      <div id="<%= register_year %>" class="tab-pane">
+
+        <% current_user.registers_months(register_year).each do |register_month| %>
+
+	  <h2><%= register_month[:name] %></h2>
+	  <%= render partial: 'registers', locals: { 
+	  model_class: model_class,
+	  registers: current_user.registers_by_date(register_year, register_month[:id]),
+	  registers_month: register_month,
+	  registers_year: register_year
+	  }
+	  %>
+       <% end %>
+
+     </div>
+
+
+    <% end %>
+  </div><!-- /.tab-content -->
+</div><!-- /.tabbable -->
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_register_path,
