--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -24,6 +24,8 @@
 		       registers_month: register_month,
 		       registers_year: register_year
 		       } %>
+	    
+            <hr />
 	  <% end %>
         </div>
       <% end %>
@@ -36,8 +38,8 @@
     Start creating registers using the button below. You will be send to the 
     <strong>creation</strong> page.
   </p>
+
 <% end %>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_register_path,
-            :class => 'btn btn-primary' %>
+<%= link_to t('.new', :default => t("helpers.links.new")), new_register_path,
+                        :class => 'btn btn-primary' %>
