--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 
     <!-- For all other devices -->
     <!-- Size should be 32 x 32 pixels -->
-    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+    <%= favicon_link_tag 'libra.ico', :rel => 'shortcut icon' %>
   </head>
   <body>
 
@@ -44,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-	  <%= link_to "Balance", root_path, class: 'brand' %>
+	  <%= link_to image_tag("libra.ico", size: "20x20") + " Balance", root_path, class: 'brand' %>
           <div class="container nav-collapse">
             <ul class="nav">
 	      <% if user_signed_in? %>
