Fixed minor bug.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,6 @@
 
 <h4> We are under construction!.</h4>
 
-<p>Balance is a web application which helps you to have a control over your 
+<p>Balance is a web application which helps you to have control over your 
 incomes and outgoings. You can add a short description for each record, and
-you can know in what you are spending your money and how much you have left.</p>
+you can know how you are spending your money and how much you have left.</p>
