--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -25,8 +25,9 @@
 		       } %>
 
 	    <%= link_to "Destroy #{ register_month[:name]}", 
-		destroy_month_registers_path(register_year, register_month[:id]), method: :delete,
-		confirm: 'Are you sure?', class: 'btn btn-danger' %>
+		destroy_month_registers_path(register_year, register_month[:id]), 
+		method: :delete, confirm: "Are you sure you want to destroy all the records for #{ register_month[:name]}?", 
+		class: 'btn btn-danger' %>
 	    
             <hr />
 	  <% end %>
