--- a/app/views/registers/_registers.html.erb
+++ b/app/views/registers/_registers.html.erb
@@ -13,7 +13,7 @@
     <% registers.each do |register| %>
     <tr>
       <td><%= register.description %></td>
-      <td>$ <%= register.amount %></td>
+      <td><%= number_to_currency(register.amount, unit: '$ ') %></td>
       <td><%= register.balance_type %></td>
       <td><%= show_paid_status(register) %></td>
       <td><%= register.created_at.strftime("%a, %e %b %Y") %></td>
@@ -30,17 +30,17 @@
     <% end %>
     <tr>
       <td>
-	<strong>Total Incoming: </strong>$<span id="total-incoming"> <%= current_user.total_incoming_month(registers_month[:id], registers_year) %></span>
+	<strong>Total Incoming: </strong><span id="total-incoming"> <%= number_to_currency(current_user.total_incoming_month(registers_month[:id], registers_year), unit: "$ ") %></span>
       </td>
     </tr>
     <tr>
       <td>
-	<strong>Total Outgoing: </strong>$<span id="total-outgoing"> <%= current_user.total_outgoing_month(registers_month[:id], registers_year) %></span>
+	<strong>Total Outgoing: </strong><span id="total-outgoing"> <%= number_to_currency(current_user.total_outgoing_month(registers_month[:id], registers_year), unit: "$ ") %></span>
       </td>
     </tr>
     <tr>
       <td>
-	<strong>Total Balance: </strong>$<span id="balance"> <%= current_user.total_balance_month(registers_month[:id], registers_year) %></span>
+	<strong>Total Balance: </strong>$<span id="balance"> <%= number_to_currency(current_user.total_balance_month(registers_month[:id], registers_year), unit: "") %></span>
       </td>
     </tr>
   </tbody>
