--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -36,10 +36,22 @@ body {
 // Example:
 // @linkColor: #ff0000;    
 
-span#total-incoming {
+.incoming {
     color: green;
 }
 
-span#total-outgoing {
+.outgoing {
     color: red;
+}
+
+dl.month-summary {
+    width: 30%;
+    text-align: right;
+    margin-left: 15%;
+}
+
+dl.paid-summary {
+    float: right;
+    margin-top: -9%;
+    margin-right: 30%;
 }
