--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -31,6 +31,12 @@
 	    
             <hr />
 	  <% end %>
+
+	  <%= link_to t('.new', :default => t("helpers.links.new")), new_register_path,
+                        :class => 'btn btn-primary' %>
+	  <%= link_to "Destroy #{ register_year }", destroy_year_registers_path(register_year), 
+	      method: :delete, confirm: "Are you sure you want to destroy all the records for #{ register_year } ?", 
+	      class: 'btn btn-danger' %>	  
         </div>
       <% end %>
     </div><!-- /.tab-content -->
@@ -43,7 +49,8 @@
     <strong>creation</strong> page.
   </p>
 
+  <%= link_to t('.new', :default => t("helpers.links.new")), new_register_path,
+                        :class => 'btn btn-primary' %>
+
 <% end %>
 
-<%= link_to t('.new', :default => t("helpers.links.new")), new_register_path,
-                        :class => 'btn btn-primary' %>
