--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -9,6 +9,7 @@
   <div id="register_paid_input">
     <%= f.input :paid %>
   </div>
+  <%= f.input :payment_type %>
 
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
