Added popover to payment status.

--- a/app/views/registers/_popover_payment_type.html.erb
+++ b/app/views/registers/_popover_payment_type.html.erb
@@ -1,5 +1,5 @@
 <div class="payment-type-popover-wrapper" style="display: none;">  
-  <div class="payment-type-popover-content">    
+  <div id="payment-type-popover-content-register-<%= register_id %>">
     <p>
       <strong>Total Incomes: </strong>
       <span class="incoming">
