--- a/app/views/registers/_registers.html.erb
+++ b/app/views/registers/_registers.html.erb
@@ -13,7 +13,7 @@
   </thead>
   <tbody>
     <% registers.each do |register| %>
-      <tr id="p">
+      <tr class="register" id="register-<%= register.id %>">
 	<td><%= register.date.day %></td>
 	<td><%= register.description %></td>
 	<td class="amount"><%= number_to_currency(register.amount, unit: '$ ') %></td>
@@ -30,7 +30,7 @@
 	      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
 	      :class => 'btn btn-mini btn-danger' %>
 	  <% if register.payment_type.present? %>
-	    <%= render partial: 'popover_payment_type', locals: { current_user: current_user, register_month: registers_month, register_year: registers_year, payment_type: register.payment_type } %>
+	    <%= render partial: 'popover_payment_type', locals: { register_id: register.id, current_user: current_user, register_month: registers_month, register_year: registers_year, payment_type: register.payment_type } %>
 	  <% end %>
 	</td>
       </tr>      
